# SAP-Recommendation

./: .gitignore  README.md
MS Teams work V1/: .gitignore  (+1 more)
Market_trends/ingestion/: .env.example  .gitignore  Dockerfile  Dockerfile.playwright  README.md  aws-credentials.template  docker-compose.yml  pyproject.toml
Market_trends/ingestion/infra/: bucket-policy-market-trend-exp2.json
Market_trends/ingestion/infra/terraform/: main.tf  market_trend_exp_access.tf  terraform.tfvars.example
Market_trends/ingestion/scripts/: apply_bucket_policy.py  aws_whoami.py  init-localstack.sh  sync_bronze_s3_to_volume.sh
Market_trends/ingestion/src/ingestion/: __init__.py  errors.py  main.py
Market_trends/ingestion/tests/: conftest.py  test_kaggle.py  test_registry.py  test_rss_generic.py
Market_trends/ingestion/tests/fixtures/: kaggle_competitions.json  pluralsight_feed.xml  techcrunch_feed.xml
recommendation_engine/: .env.example  .gitignore  README.md  pyproject.toml
recommendation_engine/sql/: schema.sql
recommendation_engine/src/recommendation_engine/: __init__.py  main.py
recommendation_engine/src/recommendation_engine/api/: __init__.py  newsletter.py  pipeline_progress.py  pipeline_runner.py  server.py
recommendation_engine/src/recommendation_engine/config/: ranking_weights.yaml  settings.py  validation.py
recommendation_engine/src/recommendation_engine/fixtures/: mock_community.json  mock_interviews.json  mock_trend_signals.json
recommendation_engine/src/recommendation_engine/graph/: workflow.py
recommendation_engine/src/recommendation_engine/io/: bronze_loader.py  data_loader.py  databricks_embeddings.py  embeddings.py  fingerprints.py  interview_parser.py  kanban.py  mission_api.py  pipeline_cache.py  s3_loader.py  s3_reader.py  s3_writer.py  source_cache.py  store.py  trend_builder.py  trend_enrichment.py
recommendation_engine/src/recommendation_engine/llm/: client.py  json_parse.py  limits.py  prompts.py  quota.py
recommendation_engine/src/recommendation_engine/models/: pipeline_snapshot.py  schemas.py  state.py
recommendation_engine/src/recommendation_engine/nodes/: __init__.py  cluster.py  extract.py  match_trends.py  persist.py  rank.py  synthesize.py  writeup.py
recommendation_engine/src/recommendation_engine/scoring/: programmatic.py
recommendation_engine/tests/: conftest.py  test_data_loader.py  test_databricks_auth.py  test_databricks_embeddings.py  test_interview_parser.py  test_json_parse.py  test_pipeline.py  test_pipeline_cache.py  test_pipeline_progress.py  test_s3_writer_keys.py  test_trend_builder.py
recommendation_engine/tools/: convert_interview.py  requirements.txt  server.py
recommendation_engine/tools/static/: index.html
recommendation_engine/tools/transcripts/: SAP_ExG_Interview_Transcript_Marcus_PowerUser.docx  SAP_ExG_Interview_Transcript_Marcus_PowerUser.json  SAP_ExG_Interview_Transcript_PriyaNair_OccasionalUser.docx
(+92 files in other folders)
