[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eg-market-trends-ingestion"
version = "0.1.0"
description = "Experience Garage market trends bronze ingestion layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "feedparser>=6.0",
    "httpx>=0.27",
    "kaggle>=1.6",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "python-dateutil>=2.9",
    "structlog>=24.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
playwright = ["playwright>=1.42"]
dev = [
    "moto[s3]>=5.0",
    "mypy>=1.9",
    "pytest>=8.1",
    "pytest-vcr>=1.0",
    "ruff>=0.3",
    "types-PyYAML",
    "types-python-dateutil",
    "boto3-stubs[s3]",
]

[project.scripts]
eg-ingest = "ingestion.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]

[tool.hatch.build.targets.wheel.force-include]
"src/ingestion" = "ingestion"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ingestion"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["feedparser.*", "kaggle.*", "vcr.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
